🛠 Refactoring - Add tsc build at publish.yml

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Install npm
         run: npm install
 
+      - name: Build
+        run: npm run build
+
       - name: Publish npm
         run: npm publish --access public
         env:
