--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,7 @@
       "strict": true,
       "declaration": true,
       "outDir": "./dist"
-    }
+    },
+    "include": ["lib/**/*"],
+    "exclude": ["node_modules", "dist", "tests"]
 }
