fix: update publish workflow to trigger on version tags and upgrade Node.js version

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,22 +1,22 @@
 name: npm publish
 
 on:
-  pull_request:
-    branches:
-      - master
+  push:
+    tags:
+      - 'v*.*.*' # e.g., v1.2.3
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout source code
-        uses: actions/checkout@v2
-
-      - name: Setup nodejs
-        uses: actions/setup-node@v1.4.3
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        
+      - name: Use Node.js 20
+        uses: actions/setup-node@v4
         with:
-          node-version: 12
-          registry-url: https://registry.npmjs.org/
+          node-version: 20
+          registry-url: 'https://registry.npmjs.org/'
 
       - name: Install npm
         run: npm install
